--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6428,12 +6428,24 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_pc_nuked_cave_habitability:0 "Tomb Cavern Habitability"
  trait_pc_nuked_cave_preference:0 "Tomb Cavern Preference"
  trait_pc_nuked_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
- pc_megaflora_cave:0 "Megaflora Cavern World"
- pc_megaflora_cave_desc:0 "Rocky cavern world with a nitrogen-oxygen atmosphere. The planetary cave system is densely forested with a strong and healthy hydro-sphere. This planet is home to a giant megafauna tree which stretches the entire planet. Roots are so large they can be seen from orbit. Habitability here would be almost impossible for a species that isn't accustomed to the gargantuan flora."
- pc_megaflora_cave_adj:0 "forested"
- mod_pc_megaflora_cave_habitability:0 "Megaflora Cavern Habitability"
- trait_pc_megaflora_cave_preference:0 "Megaflora Cavern Preference"
- trait_pc_megaflora_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_megaflorahive_cave:0 "Megaflora Cavern World"
+ pc_megaflorahive_cave_desc:0 "Rocky cavern world with a nitrogen-oxygen atmosphere. The planetary cave system is densely forested with a strong and healthy hydro-sphere. This planet is home to a giant megafauna tree which stretches the entire planet. Roots are so large they can be seen from orbit. Habitability here would be almost impossible for a species that isn't accustomed to the gargantuan flora."
+ pc_megaflorahive_cave_adj:0 "forested"
+ mod_pc_megaflorahive_cave_habitability:0 "Megaflora Cavern Habitability"
+ trait_pc_megaflorahive_cave_preference:0 "Megaflora Cavern Preference"
+ trait_pc_megaflorahive_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pdshroud_cave:0 "Shroud Cavern World"
+ pc_pdshroud_cave_desc:0 "A rocky cavern world with a nitrogen-oxygen atmosphere. Nothing about this planet conforms to known geological norms and physics. The rock formations appear to take on twisted organic shapes and there are deep chasms that go completely into the planet's crust. While there is almost an endless diversity to the planet's biomes none of them are reminiscent of those experienced anywhere else."
+ pc_pdshroud_cave_adj:0 "shrouded"
+ mod_pc_pdshroud_cave_habitability:0 "Shroud Cavern Habitability"
+ trait_pc_pdshroud_cave_preference:0 "Shroud Cavern Preference"
+ trait_pc_pdshroud_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_mega_power_cave:0 "Planetary Core Tap"
+ pc_pd_mega_power_cave_desc:0 "A rocky super-terrestrial world that has undergone an extreme industrial process, leaving the core in a highly activated state for geothermal energy collection. Whatever biosphere existed here before has been irreversibly destroyed in the process."
+ pc_pd_mega_power_cave_adj:0 "cracked"
+ mod_pc_pd_mega_power_cave_habitability:0 "Planetary Core Habitability"
+ trait_pc_pd_mega_power_cave_preference:0 "Planetary Core Preference"
+ trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
  TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$""
