bugfixin/new triggers/overwrites

--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -6448,4 +6448,16 @@ snowball_earth.11.name:0 "The First Thaw"
  trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
  #Odds and Ends
- TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$""
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ buildable_robot_pop_2_gardeners: "Gardeners"
+ buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
+ NAME_Mushroom: "Mushroom"
+ NAME_Mushroom_Monsters:0 "Space Creatures"
+ d_eludium_deposit:0 "Eludium"
+ d_crystal_deposit:0 "Crystal"
+ d_tiyankifossils_deposit:0 "Fossils"
+ engineered_environment:0 "Terraformed"
+ engineered_environment_desc:0 "This planet has been terraformed."
+ NAME_Defense_Flotilla: "Automated Defense Fleet"
+ NAME_Robo_Army: "Automated Defense Units"
+ NAME_Defense_Initiative: "Automated Defense System"
