--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -5615,3 +5615,15 @@
  mod_pc_nuked_relic_habitability:0 "死寂遗落宜居性"
  trait_pc_nuked_relic_preference:0 "死寂遗落偏好"
  trait_pc_nuked_relic_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ buildable_robot_pop_2_gardeners: "园丁"
+ buildable_robot_pop_2_gardeners_desc: "一个逝去已久的种族的侍从机器人。"
+ NAME_Mushroom: "蘑菇"
+ NAME_Mushroom_Monsters:0 "太空生物"
+ d_eludium_deposit:0 "零重素"
+ d_crystal_deposit:0 "水晶"
+ d_tiyankifossils_deposit:0 "化石"
+ engineered_environment:0 "地貌改造"
+ engineered_environment_desc:0 "这个行星已经被改造过了。"
+ NAME_Defense_Flotilla: "自动防御舰队"
+ NAME_Robo_Army: "自动防御单元"
+ NAME_Defense_Initiative: "自动防御系统"
