Rerolls AI origin if it picks a unique origin

--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -486,6 +486,16 @@
  civic_tooltip_mushroom_world_effects:0 "The people of this world evolved on a §Y$pc_mushroom$§!." 
  trait_mushroom:0 "Mycelial World People"
  trait_mushroom_desc:1 "Members of this species evolved on a planet with lush mushroom forests."
+ pd_rename_planet_01:0 "[solar_system.GetName] I"
+ pd_rename_planet_02:0 "[solar_system.GetName] II"
+ pd_rename_planet_03:0 "[solar_system.GetName] III"
+ pd_rename_planet_04:0 "[solar_system.GetName] IV"
+ pd_rename_planet_05:0 "[solar_system.GetName] V"
+ pd_rename_planet_06:0 "[solar_system.GetName] VI"
+ pd_rename_planet_07:0 "[solar_system.GetName] VII"
+ pd_rename_planet_08:0 "[solar_system.GetName] VIII"
+ pd_rename_planet_09:0 "[solar_system.GetName] IX"
+ pd_rename_planet_10:0 "[solar_system.GetName] X"
 
  ###Boreal World
  pc_boreal:0 "Boreal World"
