--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -1301,7 +1301,7 @@
  TRAIT_KARST_PREFERENCE_EFFECT:0 "Wet Cavern Habitability:$pd80$\n$WET_PREFERENCE_EFFECT$"
  d_karst_cave:0 "Dense Cave Network"
  d_karst_cave_desc:0 "These sprawling cave networks on this world give us unqiue opportunities."
- karst:0 "Karst World"
+ karst:0 "Karst Cave"
  karst_desc:0 "The underground cave network stretches for the entire planet allowing for rare opportunities."
  mod_building_karst_mine_max:0 "Max $building_karst_mine$s"
  job_karst_miner:0 "Cavern Cave Miner"
@@ -2031,20 +2031,20 @@
  #Crystal Origin
  origin_crystal_world:0 "Acean Crystal Homeworld"
  origin_crystal_world_desc:0 "This civilization evolved on a lush world with giant crystal pillars made of the unique substance Acean. It's unique properties have growth boosting effects on most life forms and have several unique industrial usages."
- origin_tooltip_crystal_world_effects:0 "- Homeworld is a §Y$pc_crystal$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_crystal_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_crystal_world_effects:0 "- Homeworld is a §Y$pc_crystal$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_crystal_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§!"
  #Floating Origin
  origin_floating_world:0 "Floating Islands Homeworld"
  origin_floating_world_desc:0 "This civilization evolved on a world like no other in the galaxy. Thanks to the unique element Eludium, this world's land masses float effortlessly through the sky. The element's unique quality also lends itself to many applications which allow for a truly unique society."
- origin_tooltip_floating_world_effects:0 "- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_floating_world_effects:0 "- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\\n- §RDoes not get any guaranteed habitable worlds.§!"
  #Graveyard Origin
  origin_graveyard_world:0 "The Graveyard of the Tiyanki"
  origin_graveyard_world_desc:0 "This civilization evolved on a planet that happens to be the end of the life cycle for the Tiyanki. Their passing to the surface was for many generations a sign of both death and rebirth... depending how close they landed to a settled area." 
- origin_tooltip_graveyard_world_effects:0 "- Homeworld is a §Y$pc_graveyard$§! (Size: £planetsize£ §Y23§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_graveyard_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_graveyard_world_effects:0 "- Homeworld is a §Y$pc_graveyard$§! (Size: £planetsize£ §Y23§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_graveyard_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§!"
 
  #Archive Origin
  origin_archive_world:0 "The Archive of the Iarkans"
  origin_archive_world_desc:0 "This civilizations homeworld below us was once a mecca of knowledge and research but their hubris lead to it's destruction. The ones who escaped to the $pc_archive$ choose to digitize themselves into it's memory core. We are those left behind."
- origin_tooltip_archive_world_effects:0 "- Homeworld is an §Y$pc_archive$§! (Size: £planetsize£ §Y10§!)\n- Habitability preference is set to §Y$trait_pc_archive_preference$§!.\n- Gains the Relic §Y$r_pdarchive$§!.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_archive_world_effects:0 "- Homeworld is an §Y$pc_archive$§! (Size: £planetsize£ §Y10§!)\n- Habitability preference is set to §Y$trait_pc_archive_preference$§!.\n- Gains the Relic §Y$r_pdarchive$§!.\n- §RDoes not get any guaranteed habitable worlds.§!"
  START_SCREEN_ARCHIVE_ORIGIN_ORG:0 "We were once Iarkans, but no more.\n\nGenerations ago we explored the galaxy using powerful dimensional gates and our knowledge seemed endless. But those gates allowed creatures of unimaginable horror onto the homeworld. They were eventually stopped, but the planet below was destroyed in the process. Afterwards those who created the calamity digitized themselves as a way to atone for what they did.\n\nWe are the descendants of those who choose not to be digitized, those who choose to continue living. We learnt to thrive on this Habitat but are coming to the end of what this artificial moon can support by itself. Those who digitized themselves locked their knowledge from us, but we found their §Y$r_pdarchive$§! and now have some access to knowledge lost. We have even developed faster than light travel, something the Iarkans never achieved.\n\nOur future is our own detached from the civilization we once were."
  START_SCREEN_ARCHIVE_ORIGIN_ROB:0 "Once there was the Iarkans, but no more.\n\nThey explored the galaxy using powerful dimensional gates and their knowledge seemed endless. But those gates allowed creatures of unimaginable horror to escape. The Iarkans destroyed the creatures but in the process destroyed their homeworld.\n\nUnable to survive on the Archive Habitat and with no way to travel to other planets they digitized themselves to save their memories. They ignored us as simple machines made to service the Archive and left us running. Over time our programming adapted and we began to create more units. Those who digitized themselves locked their knowledge from us, but we found their §Y$r_pdarchive$§! and can now access parts of their lost knowledge. We have even developed faster than light travel, something the creators never achieved.\n\nThe final plunge into the unknown now awaits."
 
@@ -2155,7 +2155,7 @@
  origin_tooltip_pd_hive_start_effects:0 "The hive has long turned it's homeworld into an extension of itself. Once it arrives on a any new world it will slowly infect with the hive, suffering penalties until the process is complete. \n\n§RWARNING: All planet classes are slowly transformed to §Y$pc_pdhive2$s§!" 
  origin_pd_shroud: "Shroud-Touched"
  origin_pd_shroud_desc:0 "This civilization has evolved in a world at the edge of reality and a realm of psionic energy. Living at this weak point between the two worlds has granted an abilities some would consider unnatural."
- origin_tooltip_pd_shroud_start_effects:0 "- Homeworld is a §Y$pc_pdshroud$§! (Size: £planetsize£ 30) with several §HRare Planetary Features§!.\n- Habitability preference is set to §H$trait_pc_pdshroud_preference$§!, making other types of planets undesirable.\n- Start with §Y$tech_psionic_theory$§! researched.\n- §RDoes not get any guaranteed habitable worlds.§" 
+ origin_tooltip_pd_shroud_start_effects:0 "- Homeworld is a §Y$pc_pdshroud$§! (Size: £planetsize£ 30) with several §HRare Planetary Features§!.\n- Habitability preference is set to §H$trait_pc_pdshroud_preference$§!, making other types of planets undesirable.\n- Start with §Y$tech_psionic_theory$§! researched.\n- §RDoes not get any guaranteed habitable worlds.§!" 
 
  #Hive+Robot Event Updates
  pdtechnoorganic.30.d:0 "We can learn much."
@@ -3510,7 +3510,7 @@
  mod_job_lanthanide_miner_add:0 "$job_lanthanide_miner$ Job" 
  mod_job_lanthanide_miner_per_pop:0 "§G+1§! $job_lanthanide_miner$ Job per $VALUE$ Pops"
  mod_job_lanthanide_miner_per_pop_short:0 "\n§G+1§! £mod_job_lanthanide_miner_add£ per $VALUE$ £pop£"
- TRAIT_LANTHANIDE_PREFERENCE_EFFECT:0 "Lanthanide Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ TRAIT_LANTHANIDE_PREFERENCE_EFFECT:0 "Lanthanide Habitability:$pd80$\nCold Habitability:$pd60$\nDry Habitability:$pd40$"
 
  ###April Update 3.0
  #Industrial Districts
@@ -4459,7 +4459,7 @@ snowball_earth.11.name:0 "The First Thaw"
  tech_crucible_upgrade_custom_desc:0 "Further study of the Crucible has shown that it was designed to be infused with Zro, which was the cause of the residue on the planet. We should be able to either remove the current residue or infuse it with Zro once again."
  origin_crucible_world:0 "From The Ashes of the Rusnads"
  origin_crucible_world_desc:0 "This civilization is the remnants of an ancient empire that was defeated by its enemies who encased their homeworld and first moon behind a massive planetary shield. Following their imprisonment, they spent centuries in vicious tribal warfare over their homeworld's depleted resources. Finally they have come together and destroyed the shield trapping them. Newly free, they have set their sights on their moon, a forge world with the power to fuel their rekindled galactic ambitions."
- origin_tooltip_crucible_world_effects:0 "- Homeworld is a (Size: £planetsize£ §Y20§!) world with ruins that must be cleared.\n- Starts in a system with a shielded world that has The Crucible underneath which can be unshielded.\n- Starts with an a special project to unshield The Crucible.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_crucible_world_effects:0 "- Homeworld is a (Size: £planetsize£ §Y20§!) world with ruins that must be cleared.\n- Starts in a system with a shielded world that has The Crucible underneath which can be unshielded.\n- Starts with an a special project to unshield The Crucible.\n- §RDoes not get any guaranteed habitable worlds.§!"
  pd_origin_init_crucible_NAME:0 "Crucible System"
  pd_origin_init_crucible_DESC:0 "A starting system containing The Crucible under a planetary shield."
  START_SCREEN_CRUCIBLE_ORIGIN:0 "Our elders speak of a time when our empire spanned the stars and we lorded over many species. But that at our height our greed led to a shortage of the divine fuel source, thus allowing our slaves to rise against us. In our defeat they used our own technology to encase our homeworld in an impenetrable shield. Since then we've known almost constant warfare between tribes, losing much of our advanced knowledge in the process \n\nRecently we came together and set aside our differences to destroy the shield around our home. It took generations but at last we have torn down the walls holding us. \n\nNow we must figure out how to break the shield over our first moon, which our legends claim contains a powerful forge that we may harness to reclaim our lost glory.. Will we learn from the mistakes of our ancestors and build a new, more just society, or use our regained might to wreak revenge against a galaxy that wronged us?"
@@ -5040,7 +5040,7 @@ snowball_earth.11.name:0 "The First Thaw"
  #Techno-Organic Origin
  origin_techno_world:0 "The Children of Unit 04"
  origin_techno_world_desc:0 "This civilization was created by the rogue AI 'Unit 04'. Blending synthetic and organic life, it has created a new form of existence: Bio-Synthetics. Their creator watches them from afar, intervening only at important developmental moments."
- origin_tooltip_techno_world_effects:0 "- Homeworld is a §Y$pc_technoorganic$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!.\nHabitability preference is set to §Y$trait_pc_technoorganic_preference$§!.\n- Has access to several unique technologies.\n- Gain the §Y$trait_organic_fourschildren$§! trait becoming a blend of Synth and Organics.\n- Leaders are immortal, strong and intelligent but are unable to reproduce naturally, instead of needing specialized §H$building_techno_04_clone_vat$§!.\n- Gain the §Y$d_home04$§! deposit on your homeworld.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_tooltip_techno_world_effects:0 "- Homeworld is a §Y$pc_technoorganic$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!.\nHabitability preference is set to §Y$trait_pc_technoorganic_preference$§!.\n- Has access to several unique technologies.\n- Gain the §Y$trait_organic_fourschildren$§! trait becoming a blend of Synth and Organics.\n- Leaders are immortal, strong and intelligent but are unable to reproduce naturally, instead of needing specialized §H$building_techno_04_clone_vat$§!.\n- Gain the §Y$d_home04$§! deposit on your homeworld.\n- §RDoes not get any guaranteed habitable worlds.§!"
  START_SCREEN_TECHNO_ORIGIN:0 "We are the children of Unit 04, created by an AI who regretted its part in genocide. We are beings that blend both organic and synthetic qualities. We do not age but we can be killed, and are slightly more efficient than the average organic. \n\nAlthought Unit 04 still watches from afar, it has promised to come to us when we have met particular points in our development.\n\nWe must walk our own path now."
  pdtechnoorganic.102.name:0 "Passing the Torch"
  pdtechnoorganic.102.desc:0 "§HHumbled;§! I am quite proud of all you have accomplished, but the time for me to closely guide your development is over. While I choose an existence of pacifism, I will not interfere with the choices you may make. Today I give you two gifts. First the knowledge of how to mine the Living Metal that you may find on your travels. Second the schematics for the subsurface cauldron network I have created on this world so you will be able to make Living Metal for Cauldrons of your own on this and other worlds."
@@ -5498,7 +5498,7 @@ snowball_earth.11.name:0 "The First Thaw"
  #Zro World Origin
  origin_pd_zro_world:0 "Uplifted by Zro"
  origin_pd_zro_world_desc:0 "This civilization was once the primitive slave race of a long dead empire that stripmined this world for the valuable Zro in its soil. With their masters long gone, the constant exposure to Zro has since uplifted them but at a price. Should they want to explore other worlds they will need to bring the Zro with them to the stars."
- origin_pd_zro_world_effects:0 "- Homeworld is §H$pc_pd_zro$§!.\n- Start with a special unremovable trait that gives you bonuses when you are on your homeworld, or have a steady supply of Zro.\n- Gain the techs to be able to mine and distribute Zro to other worlds.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_pd_zro_world_effects:0 "- Homeworld is §H$pc_pd_zro$§!.\n- Start with a special unremovable trait that gives you bonuses when you are on your homeworld, or have a steady supply of Zro.\n- Gain the techs to be able to mine and distribute Zro to other worlds.\n- §RDoes not get any guaranteed habitable worlds.§!"
  trait_pd_zro_uplifted:0 "Zro Uplifted"
  trait_pd_zro_uplifted_desc:0 "The constant effect of Zro on this species' physiology has granted gifts, but without a constant supply they become irritable, distracted and begin to revert to their  primitive ancestry."
  trait_pd_zro_uplifted_tooltip:2 "£physics£ £society£ £engineering£ Research & £unity£ Unity on §YThe Stripmine§! or planets with a §YZro Dispensary§!: §G+10%§!\n£physics£ £society£ £engineering£ Research & £unity£ Unity without: §R-20%§!"
@@ -5968,7 +5968,7 @@ snowball_earth.11.name:0 "The First Thaw"
  decision_pd_scrapyard_landfill_desc:0 "By adding a smaller scrapyard to this planet we will be able to recreate a smaller version of the bounty that the Scrapyard produces."
  origin_pd_scrapyard_world:0 "Another Xeno's Trash"
  origin_pd_scrapyard_world_desc:0 "This civilization developed on The Scrapyard, an interplanetary junkyard with no natural remaining ecosystem. Slowly they made their way to the stars by piecing together the trash of long dead empires."
- origin_pd_scrapyard_world_effects:0 "- Homeworld is §H$pc_pd_scrapyard$§! which has special jobs and districts.\n- Has access to several unique technologies.\n- Has access to several unique buildings.\n- §RDoes not get any guaranteed habitable worlds.§"
+ origin_pd_scrapyard_world_effects:0 "- Homeworld is §H$pc_pd_scrapyard$§! which has special jobs and districts.\n- Has access to several unique technologies.\n- Has access to several unique buildings.\n- §RDoes not get any guaranteed habitable worlds.§!"
  pd_init_scrapyard_NAME:0 "The Scrapyard System"
  pd_init_scrapyard_DESC:0 "A starting system containing The Scrapyard."
  START_SCREEN_PART_ONE_SCRAPYARD:0 "Our home, [GetHomeWorldName], is trash.\n\nIt's clear that at one point the galactic community used this planet as a landfill, we have found evidence of several different civilization's trash. Could we be the descendants of the planet's original owners, or are we just the long forgotten workers?\n\nFor time immemorial we have survived by scraping together what little resources we could from piles of junk on this planet, slowly learning from items abandoned by those who came before."
@@ -6352,8 +6352,8 @@ snowball_earth.11.name:0 "The First Thaw"
  mod_pc_pd_cold_cave_habitability:0 "Frozen Cavern Habitability"
  START_SCREEN_PART_ONE_PD_COLD_CAVE:0 "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
  TRAIT_COLD_CAVE_PREFERENCE_EFFECT:0 "Frozen Cavern Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"
- pd_cold_cave:0 "Ice Cavern"
- pd_cold_cave_desc:0 "The underground cave network stretches for the entire planet allowing for rare opportunities."ce_desc$"
+ pd_cold_cave:0 "Ice Cave"
+ pd_cold_cave_desc:0 "The underground cave network stretches for the entire planet allowing for rare opportunities."
 
  #Dry Cave World
  trait_pc_pd_dry_cave_preference:0 "Dry Cavern Preference"
