--- a/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_l_french.yml
@@ -6452,5 +6452,162 @@ fallingtiyanki:0 "Tiyanki récemment tombé"
  trait_pc_nuked_relic_preference:0 "Tomb Relic Preference"
  trait_pc_nuked_relic_preference_desc:0 "$trait_pc_arctic_preference_desc$"
 
+ ###3.6 January 2023
+ #Cold Cave World
+ trait_pc_pd_cold_cave_preference:0 "Frozen Cavern Preference"
+ trait_pc_pd_cold_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_cold_cave:0 "Frozen Cavern World"
+ pc_pd_cold_cave_desc:0 "Rocky world with a nitrogen-oxygen atmosphere. With a weak magnetosphere, much of the surface of this world is barren rock. Under the surface there are an endless series of caves with a frozen hydrosphere which supports lichens and mosses."
+ pc_pd_cold_cave_adj:0 "frozen"
+ mod_pc_pd_cold_cave_habitability:0 "Frozen Cavern Habitability"
+ START_SCREEN_PART_ONE_PD_COLD_CAVE:0 "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+ TRAIT_COLD_CAVE_PREFERENCE_EFFECT:0 "Frozen Cavern Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"
+ pd_cold_cave:0 "Ice Cavern"
+ pd_cold_cave_desc:0 "The underground cave network stretches for the entire planet allowing for rare opportunities."ce_desc$"
+
+ #Dry Cave World
+ trait_pc_pd_dry_cave_preference:0 "Dry Cavern Preference"
+ trait_pc_pd_dry_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_dry_cave:0 "Dry Cavern World"
+ pc_pd_dry_cave_desc:0 "Rocky world with a nitrogen-oxygen atmosphere. With a weak magnetosphere, much of the surface of this world is barren rock. Under the surface there are an endless series of sandstone caves that support a weak hydrosphere and hardy planet life."
+ pc_pd_dry_cave_adj:0 "frozen"
+ mod_pc_pd_dry_cave_habitability:0 "Dry Cavern Habitability"
+ START_SCREEN_PART_ONE_PD_DRY_CAVE:0 "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
+ TRAIT_DRY_CAVE_PREFERENCE_EFFECT:0 "Dry Cavern Habitability:$pd80$\n$DRY_PREFERENCE_EFFECT$"
+ pd_dry_cave:0 "Sandstone Cave"
+ pd_dry_cave_desc:0 "The underground cave network stretches for the entire planet allowing for rare opportunities."
+
+ pc_hive_superhab:0 "Hive Superhabitable World"
+ pc_hive_superhab_desc:0 "This entire super-terrestrial world is a giant living organism, psionically connected with the Hive Mind that shaped it. Any beings not part of the Hive that set foot here will be attacked by the very terrain itself."
+ pc_hive_superhab_adj:0 "hive"
+ mod_pc_hive_superhab_habitability:0 "Hive Superhabitable Habitability"
+ trait_pc_hive_superhab_preference:0 "Hive Superhabitable Preference"
+ trait_pc_hive_superhab_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ 
+ pc_aquatic_superhab:0 "Aquatic Superhabitable World"
+ pc_aquatic_superhab_desc:0 "A rocky super-terrestrial world with a nitrogen-oxygen atmosphere and a significant hydrosphere. 100% of the world's surface is covered in oceans."
+ pc_aquatic_superhab_adj:0 "aquatic"
+ mod_pc_aquatic_superhab_habitability:0 "Aquatic Superhabitable Habitability"
+ trait_pc_aquatic_superhab_preference:0 "Aquatic Superhabitable Preference"
+ trait_pc_aquatic_superhab_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+
+ #Other Cave Classes
+ pc_gaia_cave:0 "Gaia Cavern World"
+ pc_gaia_cave_desc:0 "An cavernous ideal, temperate world with a nitrogen-oxygen atmosphere and a resilient ecosystem. With a weak magnetosphere, much of the surface of this world is barren rock but optimal conditions for all known higher forms of life at different latitudes in the caverns."
+ pc_gaia_cave_adj:0 "ideal"
+ mod_pc_gaia_cave_habitability:0 "Gaia Cavern Habitability"
+ trait_pc_gaia_cave_preference:0 "Gaia Cavern Preference"
+ trait_pc_gaia_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_barren_cave:0 "Barren Cavern World"
+ pc_barren_cave_desc:0 "Barren and rocky cavernous world with a thin or non-existent atmosphere. The surface is covered in meteor impact craters and is completely devoid of life, but hides an extensive cave network below the surface."
+ pc_hive_cave:0 "Hive Cavern World"
+ pc_hive_cave_desc:0 "This entire world is a giant living organism, psionically connected with the Hive Mind that shaped it. Any beings not part of the Hive that set foot here will be attacked by the very terrain itself. Much of the surface of this world is barren rock but the hive thrives in the caverns below the surface."
+ pc_hive_cave_adj:0 "hive"
+ mod_pc_hive_cave_habitability:0 "Hive Cavern Habitability"
+ trait_pc_hive_cave_preference:0 "Hive Cavern Preference"
+ trait_pc_hive_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_necro_cave:0 "Necro Cavern World"
+ pc_pd_necro_cave_desc:0 "Rocky cavern world with monolithic structures inside a planetary cave network. The planet is only suited for necro-empires that have the ability to create it and is inhospitable to outsiders."
+ pc_pd_necro_cave_adj:0 "entombed"
+ mod_pc_pd_necro_cave_habitability:0 "Necro Cavern Habitability"
+ trait_pc_pd_necro_cave_preference:0 "Necro Cavern Preference"
+ trait_pc_pd_necro_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_aquatic_cave:0 "Aquatic Cavern World"
+ pc_aquatic_cave_desc:0 "A rocky cavern world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Much of the surface of this world is barren rock but the caverns below house a planet wide underground ocean."
+ pc_aquatic_cave_adj:0 "aquatic"
+ mod_pc_aquatic_cave_habitability:0 "Aquatic Superhabitable Habitability"
+ trait_pc_aquatic_cave_preference:0 "Aquatic Superhabitable Preference"
+ trait_pc_aquatic_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_machine_cave:0 "Machine Cavern World"
+ pc_machine_cave_desc:0 "Rocky cavern world filled with artificial structures. The thin atmosphere consists mostly of industrial pollutants and is not capable of supporting biological life."
+ pc_machine_cave_adj:0 "cybernetic"
+ mod_pc_machine_cave_habitability:0 "Machine Cavern Habitability"
+ trait_pc_machine_cave_preference:0 "Machine Cavern Preference"
+ trait_pc_machine_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_wasteland_cave:0 "Wasteland Cavern World"
+ pc_pd_wasteland_cave_desc:0 "A rocky cavern world with a polluted nitrogen-oxygen atmosphere. Unregulated industry has turned the cave system under the surface into a toxic soup, a perfect place to produce without worrying about the environment."
+ pc_pd_wasteland_cave_adj:0 "toxic"
+ mod_pc_pd_wasteland_cave_habitability:0 "Wasteland Cavern Habitability"
+ trait_pc_pd_wasteland_cave_preference:0 "Wasteland Cavern Preference"
+ trait_pc_pd_wasteland_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_nuked_cave:0 "Tomb Cavern World"
+ pc_nuked_cave_desc:0 "A rocky cavern world with a nitrogen-oxygen atmosphere. It is currently experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of radiation on the surface and in its cave network. Minimal signs of life."
+ pc_nuked_cave_adj:0 "nuked"
+ mod_pc_nuked_cave_habitability:0 "Tomb Cavern Habitability"
+ trait_pc_nuked_cave_preference:0 "Tomb Cavern Preference"
+ trait_pc_nuked_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_megaflorahive_cave:0 "Megaflora Cavern World"
+ pc_megaflorahive_cave_desc:0 "Rocky cavern world with a nitrogen-oxygen atmosphere. The planetary cave system is densely forested with a strong and healthy hydro-sphere. This planet is home to a giant megafauna tree which stretches the entire planet. Habitability here would be almost impossible for a species that isn't accustomed to the gargantuan flora."
+ pc_megaflorahive_cave_adj:0 "forested"
+ mod_pc_megaflorahive_cave_habitability:0 "Megaflora Cavern Habitability"
+ trait_pc_megaflorahive_cave_preference:0 "Megaflora Cavern Preference"
+ trait_pc_megaflorahive_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pdshroud_cave:0 "Shroud Cavern World"
+ pc_pdshroud_cave_desc:0 "A rocky cavern world with a nitrogen-oxygen atmosphere. Nothing about this planet conforms to known geological norms and physics. The rock formations appear to take on twisted organic shapes and there are deep chasms that go completely into the planet's crust. While there is almost an endless diversity to the planet's biomes none of them are reminiscent of those experienced anywhere else."
+ pc_pdshroud_cave_adj:0 "shrouded"
+ mod_pc_pdshroud_cave_habitability:0 "Shroud Cavern Habitability"
+ trait_pc_pdshroud_cave_preference:0 "Shroud Cavern Preference"
+ trait_pc_pdshroud_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_pd_mega_power_cave:0 "Planetary Core Tap"
+ pc_pd_mega_power_cave_desc:0 "A rocky super-terrestrial world that has undergone an extreme industrial process, leaving the core in a highly activated state for geothermal energy collection. Whatever biosphere existed here before has been irreversibly destroyed in the process."
+ pc_pd_mega_power_cave_adj:0 "cracked"
+ mod_pc_pd_mega_power_cave_habitability:0 "Planetary Core Habitability"
+ trait_pc_pd_mega_power_cave_preference:0 "Planetary Core Preference"
+ trait_pc_pd_mega_power_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
+ #Odds and Ends
+ TRAIT_COLD_SUPERHAB_PREFERENCE_EFFECT:0 "Cold Superhabitable Habitability:$pd80$\n$COLD_PREFERENCE_EFFECT$"" 
+ buildable_robot_pop_2_gardeners: "Gardeners"
+ buildable_robot_pop_2_gardeners_desc: "The servant droids of a long dead race."
+ NAME_Mushroom: "Mushroom"
+ NAME_Mushroom_Monsters:0 "Space Creatures"
+ d_eludium_deposit:0 "Eludium"
+ d_crystal_deposit:0 "Crystal"
+ d_tiyankifossils_deposit:0 "Fossils"
+ engineered_environment:0 "Terraformed"
+ engineered_environment_desc:0 "This planet has been terraformed."
+ NAME_Defense_Flotilla: "Automated Defense Fleet"
+ NAME_Robo_Army: "Automated Defense Units"
+ NAME_Defense_Initiative: "Automated Defense System"
+ d_pd_roguecap_arc:0 "Servitor Capital Complex"
+ d_pd_roguecap_arc_desc:0 "We will build an immense Servitor Capital Complex to greatly improve our ability to serve our Bio-Trophies."
+ job_pd_capital_bio_politician:0 "Bio-Politician"
+ job_pd_capital_bio_politician_plural:0 "Bio-Politicians"
+ job_pd_capital_bio_politician_desc:0 "Some Bio-Trophies are only truly happy if they appear more important than the rest. Thankfully, having another biological creature tell them what to do improves the other Bio-Trophy's compliance, making it easier on our drones to pamper."
+ mod_job_pd_capital_bio_politician_add:0 "$job_pd_capital_bio_politician$ Jobs"
+ mod_job_pd_capital_bio_politician_per_pop:0 "§G+1§! $job_pd_capital_bio_politician$ Job per $VALUE$ Pops"
+ mod_job_pd_capital_bio_politician_per_pop_short:0 "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ per $VALUE$ £pop£"
+ job_pd_capital_bio_effect_desc:0 "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§! and increase §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+ building_pd_rogue_council:0 "Bio-Trophy Council"
+ building_pd_rogue_council_desc:0 "Allowing some Bio-Trophies to appear in a leadership role helps fulfill the biological need for a social hierarchy. Carefully chosen to create 'political deadlock', the illusion of control helps focus the other Bio-Trophies and frees time for our drones to better pamper them."
+ decision_rogue_cap_arc:0 "Servitor Capital Project"
+ decision_rogue_cap_arc_desc:0 "We will specialize this planetary unit to better focus our operational processes of biological pampering."
+ decision_roguecap_arc_effects:0 "Add the Servitor Capital Complex to this capital, taking up some district space and gaining a specialized capital in return."
+ building_navel_base:0 "Naval Office"
+ building_navel_base_desc:0 "A planetary military base dedicated to naval support."
+ building_navel_command:0 "Naval Command Centre"
+ building_navel_command_desc:0 "A massive military complex dedicated to the administration of our fleets."
+
+ #Radiotrophic Superhab/Cave/Tidal
+ pc_irradiated_superhab:0 "Radiotrophic Superhabitable World"
+ pc_irradiated_superhab_desc:0 "Rocky super-terrestrial world with a nitrogen-oxygen atmosphere. High levels of radioactivity have mutated life on this planet, which now uses radiosynthesis to convert gamma radiation to energy."
+ pc_irradiated_superhab_adj:0 "radiotrophic"
+ mod_pc_irradiated_superhab_habitability:0 "Radiotrophic Superhabitable Habitability"
+ trait_pc_irradiated_superhab_preference:0 "Radiotrophic Superhabitable Preference"
+ trait_pc_irradiated_superhab_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_irradiated_cave:0 "Radiotrophic Cavern World"
+ pc_irradiated_cave_desc:0 "Rocky cavern world with a nitrogen-oxygen atmosphere. High levels of radioactivity have mutated life on this planet, which now uses radiosynthesis to convert gamma radiation to energy."
+ pc_irradiated_cave_adj:0 "radiotrophic"
+ mod_pc_irradiated_cave_habitability:0 "Radiotrophic Cavern Habitability"
+ trait_pc_irradiated_cave_preference:0 "Radiotrophic Cavern Preference"
+ trait_pc_irradiated_cave_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+ pc_irradiated_tidal:0 "Radiotrophic Tidally-Locked World"
+ pc_irradiated_tidal_desc:0 "Rocky tidally-locked world with a nitrogen-oxygen atmosphere. High levels of radioactivity have mutated life on this planet, which now uses radiosynthesis to convert gamma radiation to energy."
+ pc_irradiated_tidal_adj:0 "radiotrophic"
+ mod_pc_irradiated_tidal_habitability:0 "Radiotrophic Tidally-Locked Habitability"
+ trait_pc_irradiated_tidal_preference:0 "Radiotrophic Tidally-Locked Preference"
+ trait_pc_irradiated_tidal_preference_desc:0 "$trait_pc_arctic_preference_desc$"
+
  
 
