--- a/planetary_diversity_exotics/localisation/simp_chinese/pd_exotics_l_simp_chinese.yml
+++ b/planetary_diversity_exotics/localisation/simp_chinese/pd_exotics_l_simp_chinese.yml
@@ -1,13 +1,13 @@
 ﻿l_simp_chinese:
  tech_ash_tectonic_drillers:0 "地壳碎裂"
  tech_ash_tectonic_drillers_desc:0 "绝大多数宜居星球都缺乏我们赖以为生的独有大气。理论上讲，利用地壳碎裂技术，可以释放出星际殖民所需的此类气体。"
- methane_terraforming_candidate:0 "甲烷环境改造候选者"
+ methane_terraforming_candidate:0 "环境改造候选者（甲烷星球）"
  methane_terraforming_candidate_desc:0 "这个冰封星球表面荒芜且毫无生机，但它仍然有望承载一个繁荣的生态系统。利用合适的科技加以改造，这里便可以成为一个宜居的世界。"
- ammonia_terraforming_candidate:0 "氨环境改造候选者"
+ ammonia_terraforming_candidate:0 "环境改造候选者（氨星球）"
  ammonia_terraforming_candidate_desc:0 "这个剧毒星球表面荒芜且毫无生机，但它仍然有望承载一个繁荣的生态系统。利用合适的科技加以改造，这里便可以成为一个宜居的世界。"
- sulfur_terraforming_candidate:0 "硫磺环境改造候选者"
+ sulfur_terraforming_candidate:0 "环境改造候选者（硫磺星球）"
  sulfur_terraforming_candidate_desc:0 "这个剧毒星球表面荒芜且毫无生机，但它仍然有望承载一个繁荣的生态系统。利用合适的科技加以改造，这里便可以成为一个宜居的世界。"
- origin_pd_rogue_voidfarers:0 "流浪，自孤星，向虚空"
+ origin_pd_rogue_voidfarers:0 "虚空孤旅"
  origin_pd_rogue_voidfarers_desc:0 "该文明发源自一个流浪星球——它被母恒星放逐，漫游于宇宙深空，最后又被黑洞星团捕获。活跃的地质活动产生出热量，受到厚重大气的保护，热量免于从地表逸散，维持住这个星球的可住环境。"
  origin_pd_rogue_voidfarers_effects:0 "—母星为§H$pc_rogue$§!\n—不能以常规方式将星球改造为§Y孤谲星球§!，但是可以改造§Y黑洞§!、§Y脉冲星§!和§Y中子星§!周边轨道上的星球\n—解锁决议，以期更优使用§Y居住站§!\n—开局即可研究§Y居住站§!结构"
  building_rogue_lab:0 "孤谲天文台"
@@ -63,7 +63,7 @@
  decision_expand_hycean_sea_desc:0 "氢海是我们的家园——家园当然多多益善。我们的冰开采网络使我们可以从其他的天体上采集冰，并逐渐将其释放到[This.GetName]的海洋中，扩展星球上的宜居区域。"
  pc_dwarf_gas_giant:0 "气态矮星"
  pc_dwarf_gas_giant_desc:0 "其大气主要由氢气和氦气组成，围绕着一个致密的核心的气态行星。它有厚厚的氢氦大气层，深层中存在有冰、岩石、或者由水和氨构成的液态海洋。"
- hycean_terraforming_candidate:0 "氢海环境改造候选"
+ hycean_terraforming_candidate:0 "环境改造候选（氢海星球）"
  hycean_terraforming_candidate_desc:0 "虽然贫瘠且缺乏生命，但这个气态巨行星拥有生命的基本要素。如果有合适的技术，它可以被改造成一个氢海星球。"
  pd_hycean_start_init_NAME:0 "氢海开局"
  pd_hycean_start_init_DESC:0 "一个单独的巨大行星，有两个相邻的地貌改造候选。"
@@ -93,7 +93,7 @@
  pd_building_acid_rock_desc:0 "该星球的腐蚀性环境很容易暴露出矿床。"
  pd_building_acid_research:0 "酸性研究部"
  pd_building_acid_research_desc:0 "这些独特的生命形式，以及对抗酸性所需的工程学知识，共同让此地成为了科学发现的温床。"
- sulfur_terraforming_candidate_for_others:0 "硫磺环境改造候选者"
+ sulfur_terraforming_candidate_for_others:0 "环境改造候选者（硫磺星球）"
  sulfur_terraforming_candidate_for_others_desc:0 "虽然这个剧毒星球表面荒芜且毫无生机，但它仍有潜力承载硫基生态系统。"
- methane_terraforming_candidate_for_others:0 "甲烷环境改造候选者"
+ methane_terraforming_candidate_for_others:0 "环境改造候选者（甲烷星球）"
  methane_terraforming_candidate_for_others_desc:0 "虽然这个剧毒星球表面荒芜且毫无生机，但它仍有潜力承载甲烷基生态系统。"
